The gallary page is about to finish, but the task page is comletely done.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </table>
     
 <!-- Central picture -->
-    <table cellpadding="40px" background="./assets/images/desk3.jpg">
+    <table cellpadding="40px" background="./assets/images/back3.jpg">
         <tr>
             <td> 
                 <img src="./assets/images/Back_52px.png" alt="backward icon">
@@ -104,7 +104,7 @@
             <td>
                 <h2 align="Center">Workshop Feedback</h2>
                 <p align="center">“Abenezer was knowledgeable but at the same time very approachable. He had a sense of humor and very engaging style that gave me confidence that I can do this.”</p>
-                <p align="center"><input type="submit" value="submit"></p>
+                <a href="talks.html"><p align="center"><input type="button" value="See My Workshop"></p></a>
             </td>
             <td> 
                 <img src="./assets/images/Forward_52px.png" alt="forward icon">
@@ -134,7 +134,7 @@
 
             </td>
             <td>
-                <img src="./assets/images/rounded_corners (2).jpg" alt="workout imageS"><br><br><br><br>
+                <img src="./assets/images/workout.jpg" alt="workout imageS"><br><br><br><br>
             </td>
         </tr>
         <tr>
@@ -165,7 +165,7 @@
                 <a href="talks.html" >SEE ALL TASKS &rsaquo;</a>
             </td>
             <td>
-                <img src="./assets/images/rounded_corners (2).jpg" alt=""><br><br><br><br>
+                <img src="./assets/images/python.jpg" alt="python inmage"><br><br><br><br>
             </td>
         </tr>
     </table>
@@ -175,12 +175,12 @@
         <br>
         <p align="center">
             <a href="">LICENSE:CC-BY-SA <br>
-                <img src="./assets/images/Creative Commons_21px.png" alt=""><img src="./assets/images/User Engagement Male_21px.png" alt=""><img src="./assets/images/Copyleft_21px.png" alt="">
+                <img src="./assets/images/Creative Commons_21px.png" alt="Creative commons icon"><img src="./assets/images/User Engagement Male_21px.png" alt="user engagment icon"><img src="./assets/images/Copyleft_21px.png" alt="copyright icon">
             </a>
         </p>
 <!-- Bottom links -->
-        <p align="center">&#169;Abenezer Fekadu, 2020 · Made with <a href="">&#9825;</a>, <a href=""><img src="./assets/images/Code Fork_30px.png" alt=""></a>, the <a href="">blogdown</a> package, and the <a href="">Academic theme</a> for <a href="">Hugo</a>.</p>
-        <p align="right"><a href=""><img src="./assets/images/Chevron Up_30px.png" alt=""></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+        <p align="center">&#169;Abenezer Fekadu, 2020 · Made with <a href="">&#9825;</a>, <a href=""><img src="./assets/images/Code Fork_30px.png" alt="code fork icons"></a>, the <a href="">blogdown</a> package, and the <a href="">Academic theme</a> for <a href="">Hugo</a>.</p>
+        <p align="right"><a href=""><img src="./assets/images/Chevron Up_30px.png" alt="upward icons"></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 
 </body>
 </html>
