--- a/talks.html
+++ b/talks.html
@@ -80,12 +80,12 @@
             <table>
                 <tr>
                     <td>
-                        <img src="./assets/images/rounded_corners (2).jpg" alt="android pic"><br><br><br><br><br><br>
+                        <img src="./assets/images/android (1).jpg" alt="android pic"><br><br><br><br><br><br>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <img src="./assets/images/rounded_corners (2).jpg" alt="web design pic"><br><br><br><br>
+                        <img src="./assets/images/web.jpg" alt="web design pic"><br><br><br><br>
                     </td>
                 </tr>
             </table>
@@ -151,12 +151,12 @@
             <table>
                 <tr>
                     <td>
-                        <img src="./assets/images/rounded_corners (2).jpg" alt="Python pic"><br><br><br><br><br><br>
+                        <img src="./assets/images/python.jpg" alt="Python pic"><br><br><br><br><br><br>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <img src="./assets/images/rounded_corners (2).jpg" alt="Photoshop pic"><br><br><br><br>
+                        <img src="./assets/images/photoshop.jpg" alt="Photoshop pic"><br><br><br><br>
                     </td>
                 </tr>
             </table>
