--- a/blog.html
+++ b/blog.html
@@ -76,7 +76,7 @@
             <table>
                 <tr>
                     <td>
-                        <img src="./assets/images/rounded_corners (2).jpg" alt="workout pics"><br><br><br><br>
+                        <img src="./assets/images/workout.jpg" alt="workout pics"><br><br><br><br>
                     </td>
                 </tr>
                 <tr>
@@ -116,8 +116,8 @@
             </a>
         </p>
 <!-- Bottom links -->
-        <p align="right"><a href=""><img src="./assets/images/Chevron Up_30px.png" alt="upward arrow icon"></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
         <p align="center">&#169;Abenezer Fekadu, 2020 · Made with <a href="">&#9825;</a>, <a href=""><img src="./assets/images/Code Fork_30px.png" alt="code fork icon"></a>, the <a href="">blogdown</a> package, and the <a href="">Academic theme</a> for <a href="">Hugo</a>.</p>
+        <p align="right"><a href=""><img src="./assets/images/Chevron Up_30px.png" alt="upward arrow icon"></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 
 </body>
 </html>
