--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@
                 <label for=""><a href="talks.html">TASKS</a></label>&nbsp; &nbsp;
                 <label for=""></label><a href="project.html">GALLARY</a>&nbsp; &nbsp;
                 <label for=""></label><a href="contact.html">ABOUT / CONTACTS</a>&nbsp; &nbsp;
-                <img src="./assets/images/Search_24px.png" alt="search icon">&nbsp; &nbsp;
-                <img src="./assets/images/Moon Symbol_24px.png" alt="moon icon">&nbsp; &nbsp;
+                <a href="google.com"><img src="./assets/images/Search_21px.png" alt="search icon"></a>&nbsp; &nbsp;
+                <a href=""><img src="./assets/images/Moon Symbol_21px.png" alt="moon icon"></a>&nbsp; &nbsp;
                 <br><br>
                 <hr color="red">
             </td>
@@ -166,8 +166,8 @@
                                 </td>
                                 <td>
                                     <form action="mailto:se.abenezer.fekadu@gmail.com" method="post" enctype="utf-8">
-                                        <input type="text" name="name" id="" placeholder="Name" pattern="[A-Za-z]{4,8}" title="Enter 4 to 8 characters" required width="20px"><br><br>
-                                        <input type="email" name="email" id="" placeholder="Email" required title="Enter tour email"><br><br>
+                                        <input type="text" name="name" size="55px" placeholder="Name" pattern="[A-Za-z]{4,8}" title="Enter 4 to 8 characters" required ><br><br>
+                                        <input type="email" name="email" size=55px"" placeholder="Email" required title="Enter tour email"><br><br>
                                         <textarea name="details" id="" cols="50" rows="10" placeholder="Message" ></textarea><br><br>
                                         <input type="submit" value="send">
                                     </form>  
