--- a/project.html
+++ b/project.html
@@ -6,7 +6,7 @@
     <title>Personal website</title>
 </head>
 <body>
-    <body  bgcolor="FBF9F4"  alink="#ff0000" vlink="#ff0000" align="justify">
+    <body  bgcolor="FBF9F4" link="#ff0000" alink="#ff0000" vlink="#ff0000" align="justify">
 
 <!-- This the navigation bar on the top with my name  -->
 <table cellpacing="150px">
@@ -19,8 +19,8 @@
             <label for=""><a href="talks.html">TASKS</a></label>&nbsp; &nbsp;
             <label for=""></label><a href="project.html">GALLARY</a>&nbsp; &nbsp;
             <label for=""></label><a href="contact.html">ABOUT / CONTACTS</a>&nbsp; &nbsp;
-            <img src="./assets/images/Search_24px.png" alt="search icon">&nbsp; &nbsp;
-            <img src="./assets/images/Moon Symbol_24px.png" alt="moon icon">&nbsp; &nbsp;
+            <a href="google.com"><img src="./assets/images/Search_21px.png" alt="search icon"></a>&nbsp; &nbsp;
+            <a href=""><img src="./assets/images/Moon Symbol_21px.png" alt="moon icon"></a>&nbsp; &nbsp;
             <br><br>
             <hr color="red">
         </td>
@@ -28,18 +28,22 @@
 </table>
 
 <!-- This is for the title project-->
-            <h2 align="center">Projects</h2>
+            <h2 align="center">Photos</h2>
 
 <!-- This is for the red option on the top -->
-                        <table height="10px" cellspacing="30px" cellpadding="30px">
+                        <table height="10px">
                             <tr>
-                                <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </td>
+                                <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </td>
 
                                 <td>
-                                    <table bgcolor="red">
+                                    <table>
                                         <tr>
                                             <td>
                                                 <p align="right"> all | software | workshop | course | book</p>
+                                                <hr color="red">
                                             </td>
                                         </tr>
                                     </table>
@@ -151,11 +155,11 @@
         <br>
             <p align="center">
                 <a href="">LICENSE:CC-BY-SA <br><br>
-                    <img src="./assets/images/Creative Commons_21px.png" alt=""><img src="./assets/images/User Engagement Male_21px.png" alt=""><img src="./assets/images/Copyleft_21px.png" alt="">
+                    <img src="./assets/images/Creative Commons_21px.png" alt="Creative commons icon"><img src="./assets/images/User Engagement Male_21px.png" alt="user engagment icon"><img src="./assets/images/Copyleft_21px.png" alt="copyright icon">
                 </a>
             </p>
-        <p align="right"><a href=""><img src="./assets/images/Chevron Up_30px.png" alt=""></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
-        <p align="center">&#169;Abenezer Fekadu, 2020 · Made with <a href="">&#9825;</a>, <a href=""><img src="./assets/images/Code Fork_30px.png" alt=""></a>, the <a href="">blogdown</a> package, and the <a href="">Academic theme</a> for <a href="">Hugo</a>.</p>
+        <p align="center">&#169;Abenezer Fekadu, 2020 · Made with <a href="">&#9825;</a>, <a href=""><img src="./assets/images/Code Fork_30px.png" alt="code fork icon"></a>, the <a href="">blogdown</a> package, and the <a href="">Academic theme</a> for <a href="">Hugo</a>.</p>
+        <p align="right"><a href=""><img src="./assets/images/Chevron Up_30px.png" alt="upward arrow icon"></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 
 </body>
 </html>
