I am adding images on the gallary page.

--- a/project.html
+++ b/project.html
@@ -58,8 +58,11 @@
                     <table bgcolor="white">
                         <tr>
                             <td>
-                                <img src="./assets/images/f.jpg" alt=""><br>
-                                <p>Eating food makes me wanna eat more.</p>
+                                <img src="./assets/images/little bro.jpg" alt="family photo"><br>
+                                <big>
+                                    <label for="">Mothers Graduation Day</label>
+                                </big>
+                                <p> we were exited to congrat her, this was a pic on that day.</p>
                             </td>
                         </tr>
                     </table>
@@ -68,8 +71,11 @@
                     <table bgcolor="white">
                         <tr>
                             <td>
-                                <img src="./assets/images/f.jpg" alt=""><br>
-                                <p>Eating food makes me wanna eat more.</p>
+                                <img src="./assets/images/family.jpg" alt="brother pics"><br>
+                                <big>
+                                    <label for="">Family Gathering</label>
+                                </big>
+                                <p>The whole family was there having a greate time together.</p>
                             </td>
                         </tr>
                     </table>
@@ -78,40 +84,11 @@
                     <table bgcolor="white">
                         <tr>
                             <td>
-                                <img src="./assets/images/f.jpg" alt=""><br>
-                                <p>Eating food makes me wanna eat more.</p>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <table bgcolor="white">
-                        <tr>
-                            <td>
-                                <img src="./assets/images/f.jpg" alt=""><br>
-                                <p>Eating food makes me wanna eat more.</p>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-                <td>
-                    <table bgcolor="white">
-                        <tr>
-                            <td>
-                                <img src="./assets/images/f.jpg" alt=""><br>
-                                <p>Eating food makes me wanna eat more.</p>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-                <td>
-                    <table bgcolor="white">
-                        <tr>
-                            <td>
-                                <img src="./assets/images/f.jpg" alt=""><br>
-                                <p>Eating food makes me wanna eat more.</p>
+                                <img src="./assets/images/chill.jpg" alt="me and my brother"><br>
+                                <big>
+                                    <label for="">Exploring Day</label>
+                                </big>
+                                <p>On this day me and my brother going all around the city.</p>
                             </td>
                         </tr>
                     </table>
@@ -122,8 +99,52 @@
                     <table bgcolor="white">
                         <tr>
                             <td>
-                                <img src="./assets/images/f.jpg" alt=""><br>
-                                <p>Eating food makes me wanna eat more.</p>
+                                <img src="./assets/images/ceremony.jpg" alt="epiphany day"><br>
+                                <big>
+                                    <label for="">Celebratig Epiphany</label>
+                                </big>
+                                <p>I was with my brother and friends to celebrate epiphany.</p>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                    <table bgcolor="white">
+                        <tr>
+                            <td>
+                                <img src="./assets/images/babile friends.jpg" alt="hanging out with friends"><br>
+                                    <big>
+                                        <label for="">Get Together</label>
+                                    </big>
+                                <p>Me and my friends were having fun and chiling together.</p>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                    <table bgcolor="white">
+                        <tr>
+                            <td>
+                                <img src="./assets/images/hangout.jpg" alt="hanging out with my brother"><br>
+                                <big>
+                                    <label for=""></label>
+                                </big>
+                                <p>We were having a tour around the capital city A.A</p>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <table bgcolor="white">
+                        <tr>
+                            <td>
+                                <img src="./assets/images/friends.jpg" alt="church tour"><br>
+                                <big>
+                                    <label>Religious Journey</label>
+                                </big>
+                                <p>We were visiting ancient religious places together.</p>
                             </td>
                         </tr>
                     </table>
