I finished editing the gallary page and only the final check is left.

--- a/project.html
+++ b/project.html
@@ -127,7 +127,7 @@
                             <td>
                                 <img src="./assets/images/hangout.jpg" alt="hanging out with my brother"><br>
                                 <big>
-                                    <label for=""></label>
+                                    <label for="">Journey Together</label>
                                 </big>
                                 <p>We were having a tour around the capital city A.A</p>
                             </td>
@@ -153,8 +153,11 @@
                     <table bgcolor="white">
                         <tr>
                             <td>
-                                <img src="./assets/images/f.jpg" alt=""><br>
-                                <p>Eating food makes me wanna eat more.</p>
+                                <img src="./assets/images/birthday.jpg" alt="my nephiws birthday"><br>
+                                <big>
+                                    <label for="">Birthday</label>
+                                </big>
+                                <p>This was a birth day photo for my nephiws in the city. </p>
                             </td>
                         </tr>
                     </table>
@@ -163,8 +166,11 @@
                     <table bgcolor="white">
                         <tr>
                             <td>
-                                <img src="./assets/images/f.jpg" alt=""><br>
-                                <p>Eating food makes me wanna eat more.</p>
+                                <img src="./assets/images/bro friends.jpg" alt="meet new friends"><br>
+                                <big>
+                                    <label for="">Hanging Out</label>
+                                </big>
+                                <p>This day was when i met brothers friends from class.</p>
                             </td>
                         </tr>
                     </table>
