All the pages are completed, with the neccesary changes.

--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
+    <link rel="icon" href="./assets/images/Xbox A_50px.png" type="image/png">
+
 </head>
 <body  bgcolor="FBF9F4" link="#ff0000" alink="#ff0000" vlink="#ff0000" align="justify">
 <!-- The navigation bar -->
@@ -14,10 +16,10 @@
             </td>
             <td>
                 &nbsp;&nbsp;&nbsp;&nbsp;<Label><a href="blog.html">BLOG</a></Label>&nbsp; &nbsp;
-                <label for=""><a href="talks.html">TASKS</a></label>&nbsp; &nbsp;
-                <label for=""></label><a href="project.html">GALLARY</a>&nbsp; &nbsp;
+                <label for=""><a href="task.html">TASKS</a></label>&nbsp; &nbsp;
+                <label for=""></label><a href="gallery.html">GALLERY</a>&nbsp; &nbsp;
                 <label for=""></label><a href="contact.html">ABOUT / CONTACTS</a>&nbsp; &nbsp;
-                <a href="google.com"><img src="./assets/images/Search_21px.png" alt="search icon"></a>&nbsp; &nbsp;
+                <a href="https://www.google.com/"><img src="./assets/images/Search_21px.png" alt="search icon"></a>&nbsp; &nbsp;
                 <a href=""><img src="./assets/images/Moon Symbol_21px.png" alt="moon icon"></a>&nbsp; &nbsp;
                 <br><br>
                 <hr color="red">
@@ -111,7 +113,7 @@
 <br>
 <!-- footer links -->
         <p align="center">
-            <a href="">LICENSE:CC-BY-SA <br><br>
+            <a href="https://uk.practicallaw.thomsonreuters.com/4-503-9222?transitionType=Default&contextData=(sc.Default)&firstPage=true&bhcp=1">LICENSE:CC-BY-SA <br><br>
                 <img src="./assets/images/Creative Commons_21px.png" alt="creative commons icon"><img src="./assets/images/User Engagement Male_21px.png" alt="user engagment icon"><img src="./assets/images/Copyleft_21px.png" alt="copyright icon">
             </a>
         </p>
