--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
+    <link rel="icon" href="./assets/images/Xbox A_50px.png" type="image/png">
+
 </head>
 <body  bgcolor="FBF9F4" link="#ff0000" alink="#ff0000" vlink="#ff0000" align="justify">
 <!-- This is the navigation bar -->
@@ -14,10 +16,10 @@
             </td>
             <td>
                 &nbsp;&nbsp;&nbsp;&nbsp;<Label><a href="blog.html">BLOG</a></Label>&nbsp; &nbsp;
-                <label for=""><a href="talks.html">TASKS</a></label>&nbsp; &nbsp;
-                <label for=""></label><a href="project.html">GALLARY</a>&nbsp; &nbsp;
+                <label for=""><a href="task.html">TASKS</a></label>&nbsp; &nbsp;
+                <label for=""></label><a href="gallery.html">GALLERY</a>&nbsp; &nbsp;
                 <label for=""></label><a href="contact.html">ABOUT / CONTACTS</a>&nbsp; &nbsp;
-                <a href="google.com"><img src="./assets/images/Search_21px.png" alt="search icon"></a>&nbsp; &nbsp;
+                <a href="https://www.google.com/"><img src="./assets/images/Search_21px.png" alt="search icon"></a>&nbsp; &nbsp;
                 <a href=""><img src="./assets/images/Moon Symbol_21px.png" alt="moon icon"></a>&nbsp; &nbsp;
                 <br><br>
                 <hr color="red">
@@ -96,11 +98,11 @@
                                 <br><br><br><br><br><br><br><br><br><br></br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                             </td>
                                 <td>
-                                    <img src="./assets/images/New Moon_18px.png" alt=""><br>
-                                    &nbsp;<img src="./assets/images/vr.PNG" alt=""><br>
-                                    <img src="./assets/images/Thin Circle_18px.png" alt=""><br>
-                                    &nbsp;<img src="./assets/images/vr.PNG" alt=""><br>
-                                    <img src="./assets/images/Thin Circle_18px.png" alt=""><br>
+                                    <img src="./assets/images/New Moon_18px.png" alt="bold circular icon"><br>
+                                    &nbsp;<img src="./assets/images/vr.PNG" alt=" vertical line"><br>
+                                    <img src="./assets/images/Thin Circle_18px.png" alt="circular icon"><br>
+                                    &nbsp;<img src="./assets/images/vr.PNG" alt="vertical line"><br>
+                                    <img src="./assets/images/Thin Circle_18px.png" alt="circular icon"><br>
                                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                 </td>
                             <td>
@@ -172,9 +174,9 @@
                                         <input type="submit" value="send">
                                     </form>  
                                         <br>
-                                       <a href=""> <img src="./assets/images/Twitter_31px.png" alt=""></a> DM Me <br>
-                                        <a href=""><img src="./assets/images/Telegram App_31px.png" alt=""></a> Discuss on Telegram <br>
-                                        <a href=""><img src="./assets/images/GitHub_31px.png" alt=""></a> Get Accesss <br>
+                                       <a href="https://twitter.com/login?lang=en"> <img src="./assets/images/Twitter_31px.png" alt="twitter icon"></a> DM Me <br>
+                                        <a href="https://web.telegram.org/"><img src="./assets/images/Telegram App_31px.png" alt="telegram icon"></a> Discuss on Telegram <br>
+                                        <a href="https://github.com/Abenezer-Fekadu/First-Html-Practice.git"><img src="./assets/images/GitHub_31px.png" alt="git hub icon"></a> Get Accesss <br>
                                 </td>
                             </tr>
                             <tr>
@@ -192,7 +194,7 @@
 <!-- Footer part License -->
         <br>
         <p align="center">
-            <a href="">LICENSE:CC-BY-SA <br><br>
+            <a href="https://uk.practicallaw.thomsonreuters.com/4-503-9222?transitionType=Default&contextData=(sc.Default)&firstPage=true&bhcp=1">LICENSE:CC-BY-SA <br><br>
                 <img src="./assets/images/Creative Commons_21px.png" alt="creative commons icon"><img src="./assets/images/User Engagement Male_21px.png" alt="user engagment icon"><img src="./assets/images/Copyleft_21px.png" alt="copyright icon">
             </a>
         </p>
