--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
-</head>
+    <link rel="icon" href="./assets/images/Xbox A_50px.png" type="image/png">
+
 <body bgcolor="FBF9F4" link="#ff0000" alink="#ff0000" vlink="#ff0000" align="justify">
 <!-- This is the header navigation bar -->
 <table cellpacing="150px">
@@ -14,10 +15,10 @@
         </td>
         <td>
             &nbsp;&nbsp;&nbsp;&nbsp;<Label><a href="blog.html">BLOG</a></Label>&nbsp; &nbsp;
-            <label for=""><a href="talks.html">TASKS</a></label>&nbsp; &nbsp;
-            <label for=""></label><a href="project.html">GALLARY</a>&nbsp; &nbsp;
+            <label for=""><a href="task.html">TASKS</a></label>&nbsp; &nbsp;
+            <label for=""></label><a href="gallery.html">GALLERY</a>&nbsp; &nbsp;
             <label for=""></label><a href="contact.html">ABOUT / CONTACTS</a>&nbsp; &nbsp;
-            <a href="google.com"><img src="./assets/images/Search_21px.png" alt="search icon"></a>&nbsp; &nbsp;
+            <a href="https://www.google.com/"><img src="./assets/images/Search_21px.png" alt="search icon"></a>&nbsp; &nbsp;
             <a href=""><img src="./assets/images/Moon Symbol_21px.png" alt="moon icon"></a>&nbsp; &nbsp;
             <br><br>
             <hr color="red">
@@ -28,16 +29,16 @@
     <table cellpadding="40px" cellspacing="20px">
         <tr>
             <td>
-                <img src="./assets/images/icon.png" alt="Friend" width="250px" height="250px"><br>
+                <img src="./assets/images/round.jpg" alt="personl photo" width="250px" height="250px"><br>
                 <h3 align="center">Abenezer Fekadu</h3>
                 <p align="center">Addis Ababa, Second Year Student</p>
-                <p align="center"> <a href="">Web Design</a></p>
-                <a href=""><img src="./assets/images/Facebook_30px_1.png" alt="facebook icon"></a>&nbsp;
-                <a href=""><img src="./assets/images/Twitter_30px.png" alt="twitter icon"></a>&nbsp;
-                <a href=""><img src="./assets/images/GitHub_30px.png" alt="github icon"></a>&nbsp;
-               <a href=""><img src="./assets/images/Gmail_30px.png" alt="gmile icon"></a>&nbsp;
-               <a href=""><img src="./assets/images/YouTube 2_30px_1.png" alt="youtube icon"></a>&nbsp;
-               <a href=""><img src="./assets/images/Instagram_30px.png" alt="instagram icon"></a>
+                <p align="center"> <a href="">ITSC</a></p>
+                <a href="https://www.facebook.com/"><img src="./assets/images/Facebook_30px_1.png" alt="facebook icon"></a>&nbsp;
+                <a href="https://twitter.com/login?lang=en"><img src="./assets/images/Twitter_30px.png" alt="twitter icon"></a>&nbsp;
+                <a href="https://github.com/Abenezer-Fekadu/First-Html-Practice.git"><img src="./assets/images/GitHub_30px.png" alt="github icon"></a>&nbsp;
+               <a href="https://www.gmail.com/"><img src="./assets/images/Gmail_30px.png" alt="gmile icon"></a>&nbsp;
+               <a href="https://www.youtube.com/"><img src="./assets/images/YouTube 2_30px_1.png" alt="youtube icon"></a>&nbsp;
+               <a href="https://www.instagram.com/"><img src="./assets/images/Instagram_30px.png" alt="instagram icon"></a>
             </td>
             <!-- Story -->
             <td>
@@ -66,7 +67,7 @@
     <table cellpadding="30px">
         <tr>
             <td>
-                <img src="./assets/images/space2.PNG" alt="space icon">
+                <img src="./assets/images/space2.PNG" alt="space photo">
             </td>
             <td>
                 <table>
@@ -104,7 +105,7 @@
             <td>
                 <h2 align="Center">Workshop Feedback</h2>
                 <p align="center">“Abenezer was knowledgeable but at the same time very approachable. He had a sense of humor and very engaging style that gave me confidence that I can do this.”</p>
-                <a href="talks.html"><p align="center"><input type="button" value="See My Workshop"></p></a>
+                <a href="task.html"><p align="center"><input type="button" value="See My Workshop"></p></a>
             </td>
             <td> 
                 <img src="./assets/images/Forward_52px.png" alt="forward icon">
@@ -162,7 +163,7 @@
                     </tr>
                 </table>
                 <br>
-                <a href="talks.html" >SEE ALL TASKS &rsaquo;</a>
+                <a href="task.html" >SEE ALL TASKS &rsaquo;</a>
             </td>
             <td>
                 <img src="./assets/images/python.jpg" alt="python inmage"><br><br><br><br>
@@ -174,7 +175,7 @@
         <br>
         <br>
         <p align="center">
-            <a href="">LICENSE:CC-BY-SA <br>
+            <a href="https://uk.practicallaw.thomsonreuters.com/4-503-9222?transitionType=Default&contextData=(sc.Default)&firstPage=true&bhcp=1">LICENSE:CC-BY-SA <br>
                 <img src="./assets/images/Creative Commons_21px.png" alt="Creative commons icon"><img src="./assets/images/User Engagement Male_21px.png" alt="user engagment icon"><img src="./assets/images/Copyleft_21px.png" alt="copyright icon">
             </a>
         </p>
