--- a/gallery.html
+++ b/gallery.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal website</title>
+    <link rel="icon" href="./assets/images/Xbox A_50px.png" type="image/png">
+
 </head>
-<body>
-    <body  bgcolor="FBF9F4" link="#ff0000" alink="#ff0000" vlink="#ff0000" align="justify">
+<body  bgcolor="FBF9F4" link="#ff0000" alink="#ff0000" vlink="#ff0000" align="justify">
 
 <!-- This the navigation bar on the top with my name  -->
 <table cellpacing="150px">
@@ -16,10 +17,10 @@
         </td>
         <td>
             &nbsp;&nbsp;&nbsp;&nbsp;<Label><a href="blog.html">BLOG</a></Label>&nbsp; &nbsp;
-            <label for=""><a href="talks.html">TASKS</a></label>&nbsp; &nbsp;
-            <label for=""></label><a href="project.html">GALLARY</a>&nbsp; &nbsp;
+            <label for=""><a href="task.html">TASKS</a></label>&nbsp; &nbsp;
+            <label for=""></label><a href="gallery.html">GALLERY</a>&nbsp; &nbsp;
             <label for=""></label><a href="contact.html">ABOUT / CONTACTS</a>&nbsp; &nbsp;
-            <a href="google.com"><img src="./assets/images/Search_21px.png" alt="search icon"></a>&nbsp; &nbsp;
+            <a href="https://www.google.com/"><img src="./assets/images/Search_21px.png" alt="search icon"></a>&nbsp; &nbsp;
             <a href=""><img src="./assets/images/Moon Symbol_21px.png" alt="moon icon"></a>&nbsp; &nbsp;
             <br><br>
             <hr color="red">
@@ -42,7 +43,7 @@
                                     <table>
                                         <tr>
                                             <td>
-                                                <p align="right"> all | software | workshop | course | book</p>
+                                                <p align="right"> All | Family | Friends | Events | Places</p>
                                                 <hr color="red">
                                             </td>
                                         </tr>
@@ -181,10 +182,11 @@
 <!-- This is the footers logo and other features -->
         <br>
             <p align="center">
-                <a href="">LICENSE:CC-BY-SA <br><br>
+                <a href="https://uk.practicallaw.thomsonreuters.com/4-503-9222?transitionType=Default&contextData=(sc.Default)&firstPage=true&bhcp=1">LICENSE:CC-BY-SA <br><br>
                     <img src="./assets/images/Creative Commons_21px.png" alt="Creative commons icon"><img src="./assets/images/User Engagement Male_21px.png" alt="user engagment icon"><img src="./assets/images/Copyleft_21px.png" alt="copyright icon">
                 </a>
             </p>
+<!-- bottom links -->
         <p align="center">&#169;Abenezer Fekadu, 2020 · Made with <a href="">&#9825;</a>, <a href=""><img src="./assets/images/Code Fork_30px.png" alt="code fork icon"></a>, the <a href="">blogdown</a> package, and the <a href="">Academic theme</a> for <a href="">Hugo</a>.</p>
         <p align="right"><a href=""><img src="./assets/images/Chevron Up_30px.png" alt="upward arrow icon"></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 
